# localai

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS.md  CONTRIBUTING.md  HANDOFF.md  LICENSE.txt  README.md  install.ps1  localai.spec  pyproject.toml  tasks.py  uninstall.ps1
.github/workflows/: ci.yml  release.yml
.project/: status.json
docs/: architecture.md  database-schema.md  development.md  installation.md  permissions-engine.md  privacy.md  release-process.md  security-model.md  testing.md  tool-api.md  training.md  troubleshooting.md  user-guide.md
docs/diagrams/: permission-flow.mmd  tool-call-lifecycle.mmd
examples/config/: investigation.toml  minimal.toml  profiles.toml  workspace.toml
examples/plugins/word_count/: plugin.json  word_count.py
installer/: ai.iss
schemas/: config.schema.json  model-profile.schema.json  permission-rule.schema.json  plugin-manifest.schema.json  tool-definition.schema.json  tool-result.schema.json
scripts/: generate_schemas.py  seed_test_data.py
src/localai/: __init__.py  __main__.py  app.py  errors.py  logging_setup.py  version.py
src/localai/agent/: __init__.py  fallback.py  loop.py
src/localai/cli/: __init__.py  doctor.py  main.py  output.py
src/localai/config/: __init__.py  manager.py  models.py  paths.py
src/localai/domain/: __init__.py  messages.py
src/localai/permissions/: __init__.py  audit.py  engine.py
src/localai/providers/: __init__.py  base.py  discovery.py  mock.py  ollama.py
src/localai/safety/: __init__.py  backup.py  injection.py  pathsafe.py  recycle.py  sensitive.py
src/localai/storage/: __init__.py  audit_store.py  conversations.py  db.py  usage.py
src/localai/storage/migrations/: 001_initial.sql  002_message_search.sql
src/localai/tools/: __init__.py  base.py  builtin.py  fs_read.py  fs_write.py  registry.py  runner.py  shell.py  system.py
src/localai/ui/: __init__.py  app.py  art.py  commands.py  screens.py  theme.tcss  widgets.py
tests/: conftest.py
tests/integration/: test_cli_contracts.py  test_end_to_end.py  test_ui_flows.py
tests/unit/: test_agent_loop.py  test_discovery.py  test_path_safety.py  test_permission_boundaries.py  test_risk_ordering.py  test_safety.py  test_storage_and_config.py  test_tools.py
